<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bkground"
    android:layout_centerVertical="true"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/username"
        android:layout_width="200dip"
        android:layout_height="50dip"
        android:layout_marginTop="50dip"
        android:layout_centerHorizontal="true"
        android:inputType="text" />
        
    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:layout_toLeftOf="@id/username"
        android:text="@string/username"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="200dip"
        android:layout_height="50dip"
        android:layout_marginTop="20dip"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:inputType="text" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:layout_marginTop="20dip"
        android:layout_below="@id/username"
        android:layout_toLeftOf="@id/password"
        android:text="@string/password"
        android:textStyle="bold" />
	

	
	<Button
	    android:id="@+id/login"
	    android:layout_width="350dip"
	    android:layout_height="80dip"
	    android:layout_below="@id/password"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="50dip"
	    android:background="@drawable/btn_format"
	    android:text="@string/login"
	    android:textColor="@color/text_color"
	    android:textSize="30sp"
	    android:textStyle="bold" />
	
	<TextView
        android:id="@+id/otpmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/otp_not_capable"
        android:textStyle="bold" />	
        
	<TextView
        android:id="@+id/otpLabel"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:layout_marginTop="50dip"
        android:layout_below="@id/otpmessage"
        android:layout_centerHorizontal="true"
        android:text="@string/otp"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>